--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,11 @@ header {
     overflow: hidden;
 }
 
+.nav-menu .logo-container img {
+    margin-top: -10px!IMPORTANT;
+    margin-bottom: -10px!IMPORTANT;
+}
+
 .nav-menu {
     background-color: #373739bd;
     backdrop-filter: blur(15px);
@@ -104,6 +109,8 @@ header {
 .nav-buttons {
     display: flex;
     column-gap: 20px;
+    flex: 1;
+    justify-content: end;
 }
 
 .nav-buttons a {
@@ -112,7 +119,6 @@ header {
 
 .nav-container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     max-width: 1200px;
     margin: 0 auto;
