--- a/css/curso.css
+++ b/css/curso.css
@@ -50,3 +50,22 @@ section.detalle-curso .texto {
     padding: 40px;
     border-radius: 12px;
 }
+#comentarios li{
+    background-color: var(--color-grey-light-background);
+}
+#comentarios img{
+    width: 50px;
+    height: 50px;
+}
+
+#comentarios .text-muted {
+    color: var(--color-text-secondary)!important;
+}
+
+.modal-content{
+    background-color: var(--color-grey-light-background)!important;
+}
+
+.btn-close{
+    filter: invert();
+}
